Adding some addl vertx stuff
New IBResource-alike